--- a/app/variables.less
+++ b/app/variables.less
@@ -3,3 +3,7 @@
 @md-dark-disabled: rgba(0, 0, 0, 26%);
 @md-dark-icon: @md-dark-secondary;
 @md-dark-divider: rgba(0, 0, 0, 12%);
+
+@brand-primary: #7C43FD;
+@brand-accent: #536dfe;
+@brand-secondary: #DE215A;
