--- a/app/app.less
+++ b/app/app.less
@@ -1,10 +1,16 @@
 @import 'variables.less';
 @import 'components/app/app.less';
 @import 'components/todoList/todoList.less';
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400,500);
 
 html, body {
+  color: @md-dark;
   width: 100%;
   height: 100%;
+  font-size: 16px;
+  font-weight: 16px;
+  font-weight: 300;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -32,6 +38,7 @@ body {
 }
 
 .card {
+  overflow: hidden;
   border-radius: 2px;
   background-color: #fff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, 24%);
@@ -39,4 +46,39 @@ body {
 
 .material-icons {
   color: @md-dark-icon;
+}
+
+input {
+  border: none;
+  padding: 2px;
+  outline: none;
+  font-size: 16px;
+  box-shadow: 0 1px 0 @md-dark-divider;
+  font-weight: 300;
+
+  &:focus {
+    box-shadow: 0 2px 0 @brand-primary;
+  }
+
+  &::placeholder {
+    color: @md-dark-secondary;
+    font-weight: 300;
+  }
+}
+
+button {
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  padding: 8px;
+  font-size: 12px;
+  font-family: inherit;
+  border-radius: 2px;
+  letter-spacing: 0.05em;
+  background-color: @brand-primary;
+
+  &:active {
+    background-color: darken(@brand-primary, 10%);
+  }
 }
