fixes and UI improvments

--- a/app/components/app/app.html
+++ b/app/components/app/app.html
@@ -3,5 +3,5 @@
 </div>
 
 <div class="column">
-  <pre class="hljs" code="{{$ctrl.toJson($ctrl.todos, true)}}" lang="json"></pre>
+  <pre class="hljs" code="{{$ctrl.getCode()}}" lang="javascript"></pre>
 </div>
