--- a/app/components/app/app.less
+++ b/app/components/app/app.less
@@ -4,13 +4,8 @@ app {
   overflow-x: scroll;
   align-items: flex-start;
 
-  @media all and (max-width: 1024px) {
-    align-items: stretch;
-    flex-direction: column;
-  }
-
   .column {
-    flex: 0 0 50%;
+    flex: 0 1 50%;
     display: flex;
     padding: 16px;
     justify-content: center;
@@ -20,10 +15,20 @@ app {
         flex: 1 1 280px - 32px;
         margin: 0;
         padding: 16px;
+        font-size: 14px;
         min-width: 280px - 32px;
         max-width: 480px - 32px;
         border-radius: 2px;
       }
+    }
+  }
+
+  @media all and (max-width: 1024px) {
+    align-items: initial;
+    flex-direction: column;
+
+    .column {
+      flex: 0 0 auto;
     }
   }
 }
