--- a/app/variables.less
+++ b/app/variables.less
@@ -7,3 +7,9 @@
 @brand-primary: #7C43FD;
 @brand-accent: #536dfe;
 @brand-secondary: #DE215A;
+
+@brand-success: #7cb342;
+@brand-info: #039be5;
+@brand-caution: #ffd600;
+@brand-warning: #F36F22;
+@brand-danger: #ef5350;
