--- a/app/app.less
+++ b/app/app.less
@@ -8,6 +8,7 @@ html, body {
   width: 100%;
   height: 100%;
   font-size: 16px;
+  line-height: 1.125em;
   font-weight: 16px;
   font-weight: 300;
   font-family: 'Roboto', sans-serif;
@@ -25,7 +26,9 @@ body {
   color: #fff;
   height: 64px;
   display: flex;
+  z-index: 10;
   padding: 0 16px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, 24%);
   align-items: center;
   background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0.25) 100%),
     linear-gradient(90deg, #103857 0%, #402157 100%);
@@ -46,6 +49,15 @@ body {
 
 .material-icons {
   color: @md-dark-icon;
+}
+
+table {
+  border-spacing: 0;
+  border-collapse: separate;
+
+  .material-icons {
+    vertical-align: middle;
+  }
 }
 
 input {
@@ -76,9 +88,16 @@ button {
   font-family: inherit;
   border-radius: 2px;
   letter-spacing: 0.05em;
-  background-color: @brand-primary;
 
-  &:active {
-    background-color: darken(@brand-primary, 10%);
+  &.primary {
+    background-color: @brand-primary;
+
+    &:active {
+      background-color: darken(@brand-primary, 10%);
+    }
+
+    &:disabled {
+      background-color: lighten(@brand-primary, 10%);
+    }
   }
 }
