--- a/app/components/app/app.less
+++ b/app/components/app/app.less
@@ -3,6 +3,7 @@ app {
   display: flex;
   overflow-x: scroll;
   align-items: flex-start;
+  -webkit-overflow-scrolling: touch;
 
   .column {
     flex: 0 1 50%;
