--- a/app/components/todoList/todoList.less
+++ b/app/components/todoList/todoList.less
@@ -43,6 +43,7 @@ todo-list {
 
     tr.item {
       background-color: #fff;
+      transform: translate3d(0, 0, 0); // hardware acceleration
 
       &:nth-child(n + 2) td {
         box-shadow: 0 1px 0 @md-dark-divider inset;
