--- a/app/app.less
+++ b/app/app.less
@@ -21,23 +21,41 @@ body {
   background-color: rgba(0, 0, 0, 4%);
 }
 
-.navbar {
+.navbar,
+.footer {
   flex: 0 0 auto;
-  color: #fff;
-  height: 64px;
   display: flex;
   z-index: 10;
-  padding: 0 16px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, 24%);
   align-items: center;
-  background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0.25) 100%),
-    linear-gradient(90deg, #103857 0%, #402157 100%);
 
   svg {
     fill: rgba(255, 255, 255, 30%);
     width: auto;
     height: 35px;
   };
+}
+
+.navbar {
+  color: #fff;
+  height: 64px;
+  padding: 0 16px;
+  background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0.25) 100%),
+    linear-gradient(90deg, #103857 0%, #402157 100%);
+}
+
+.footer {
+  color: @md-dark-secondary;
+  padding: 0 8px 16px;
+  flex-wrap: wrap;
+  font-size: 14px;
+  min-height: 48px;
+  line-height: 14px;
+  background-color: #fff;
+
+  > * {
+    margin: 16px 8px 0;
+  }
 }
 
 .card {
@@ -113,5 +131,14 @@ button {
     &:disabled {
       background-color: lighten(@brand-primary, 10%);
     }
+  }
+}
+
+a {
+  color: @brand-primary;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
   }
 }
