--- a/app/components/app/app.html
+++ b/app/components/app/app.html
@@ -1,7 +1,1 @@
-<div class="column">
-  <todo-list class="card" todos="$ctrl.todos"></todo-list>
-</div>
-
-<div class="column">
-  <pre class="hljs" code="{{$ctrl.getCode()}}" lang="javascript"></pre>
-</div>
+<calendar></calendar>
