--- a/app/app.less
+++ b/app/app.less
@@ -1,5 +1,6 @@
 @import 'variables.less';
 @import 'components/app/app.less';
+@import 'components/todoList/todoList.less';
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400,500);
 
 html, body {
