--- a/app/components/app/app.html
+++ b/app/components/app/app.html
@@ -1,1 +1,7 @@
-<calendar></calendar>
+<div class="column">
+  <todo-list class="card" todos="$ctrl.todos"></todo-list>
+</div>
+
+<div class="column">
+  <pre class="hljs" code="{{$ctrl.getCode()}}" lang="javascript"></pre>
+</div>
